# FrameForge_Mod

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  parse_svg_profile.py  pyproject.toml  setup.py  尺寸公差宝典.swp
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: FrameForge-使用说明.md  commands.md  tutorial.md
docs/specs/: 2026-05-09-connector-hole-refactor-design.md
freecad/frameforge2/: InitGui.py  _utils.py  best_fit.py  create_aluminum_profile.py  create_bom.py  create_bom_tool.py  create_custom_profiles_tool.py  create_edit_balloons_tool.py  create_end_cap_tool.py  create_end_miter_tool.py  create_extruded_cutout_tool.py  create_gusset_tool.py  create_link.py  create_offset_plane_tool.py  create_pattern_fill_tool.py  create_profiles_tool.py  create_trimmed_profiles_tool.py  create_vent_tool.py  create_whistle_connector_tool.py  decompile_output.txt  decompiler.py  edit_profile_tool.py  end_cap.py  extruded_cutout.py  ff_tools.py  frameforge_exceptions.py  gusset.py  parametric_line.py  populate_ids.py  populate_ids_tool.py  profile.py  profile_dis.txt  trimmed_profile.py  utilities.py  whistle_connector.py
freecad/frameforge2/dynamicdata/: PropertyTableEditor.py  __init__.py
freecad/frameforge2/resources/profiles/: AluminumProfiles.20260504-101252.FCBak  migrate_to_individual.py
freecad/frameforge2/resources/profiles/aluminum/: 30.20260505-132758.FCBak  AluminumProfiles.FCStd  国标40系列 槽宽8.3.FCStd  欧标30系列 槽宽8.2.20260505-180131.FCBak  欧标30系列 槽宽8.2.FCStd  欧标45系列 槽宽10.2 槽口壁厚4.5.FCStd  欧标50+60系列 槽宽10.2 槽口壁厚6.FCStd  欧标60系列 槽宽10.2 槽口壁厚4.5.FCStd
freecad/frameforge2/resources/profiles/steel/: st4040-1.5.20260505-050638.FCBak  st4040-1.5.FCStd
freecad/frameforge2/resources/translations/: frameforge2_de.ts  frameforge2_en.qm  frameforge2_en.ts  frameforge2_es.ts  frameforge2_fr.ts  frameforge2_ja.ts  frameforge2_ru.ts  frameforge2_zh-cn.qm  frameforge2_zh-cn.ts
freecad/frameforge2/resources/ui/: create_bom.ui  create_profiles1.ui  create_profiles2.ui
freecad/frameforgemod/: InitGui.py  _bridge.py  _utils.py  adjust_profile_end_tool.py  best_fit.py  connector_hole.py  create_aluminum_profile.py  create_bom.py  create_bom_tool.py  create_connector_hole_tool.py  create_custom_profiles_tool.py  create_edit_balloons_tool.py  create_end_cap_tool.py  create_end_miter_tool.py  create_extruded_cutout_tool.py  create_gusset_tool.py  create_link.py  create_offset_plane_tool.py  create_pattern_fill_tool.py  create_profiles_tool.py  create_trimmed_profiles_tool.py  create_vent_tool.py  create_whistle_connector_tool.py  edit_profile_tool.py  end_cap.py  extruded_cutout.py  extrusions.py  frameforgemod_exceptions.py  gusset.py  isolate_tool.py  parametric_line.py  populate_ids.py  populate_ids_tool.py  preferences.py  profile.py  tolerance_tool.py  trimmed_profile.py  utilities.py  weld_tool.py  whistle_connector.py
freecad/frameforgemod/dev_tools/: decompile3.py  decompile_execute.py  reconstruct.py
freecad/frameforgemod/dynamicdata/: DynamicDataCmd.py  PropertyTableEditor.py  __init__.py
freecad/frameforgemod/resources/profiles/: aluminium_extrusion.json  metal.json  migrate_to_individual.py  wood.json  yiheda.FCStd
freecad/frameforgemod/resources/profiles/aluminum/: 30.FCStd  AluminumProfiles.20260505-231544.FCBak  国标30系列 槽宽6.3.20260505-175942.FCBak  国标30系列 槽宽6.3.FCStd  欧标20系列 槽宽6.2.FCStd  欧标40系列 槽宽10.2.FCStd  欧标40系列 槽宽8.2.20260505-180205.FCBak  欧标40系列 槽宽8.2.FCStd  欧标45系列 槽宽10.2 槽口壁厚4.5.20260505-180257.FCBak  欧标50系列 槽宽10.2 槽口壁厚4.5.FCStd
freecad/frameforgemod/resources/profiles/steel/: ceshi.20260509-040057.FCBak  ceshi.20260509-064508.FCBak  ceshi.FCStd  test.20260510-062646.FCBak  test.20260510-150853.FCBak  test.20260512-164739.FCBak  test.20260515-043731.FCBak  test.FCStd  test1.FCStd  未命名.FCStd  矩型管 50 X 30 X 2.6.20260509-013710.FCBak  矩型管 50 X 30 X 2.6.FCStd  矩型管 50 X 30 X 2.6.STEP  轻轨 轻轨9.20260509-012214.FCBak  轻轨 轻轨9.FCStd
freecad/frameforgemod/resources/translations/: frameforgemod_de.ts  frameforgemod_en.qm  frameforgemod_en.ts  frameforgemod_es.ts  frameforgemod_fr.ts  frameforgemod_ja.ts  frameforgemod_ru.ts  frameforgemod_zh-cn.qm  frameforgemod_zh-cn.ts
freecad/frameforgemod/resources/ui/: create_custom_profiles.ui  create_profiles1.ui  create_profiles2.ui  create_trimmed_profiles.ui  populate_ids.ui  preferences.ui
