[project]
name = "frameforgemod"
version = "0.1"
description = "FrameForgemod - Modified fork of FrameForge for creating Frames and Beams."
authors = [
    {name = "FrameForgemod contributors"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "freecad" },
    { include = "freecad.frameforgemod" },
]

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
